# telecharm-userbot

./: .dockerignore  .env.dist  .env.sample  .flake8  .gitignore  .isort.cfg  Dockerfile  Dockerfile.full  LICENSE  README.md  config.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  config.ini  config.py  main.py
app/modules/: __init__.py  args_parser.py  basic_handlers.py  clean_up_mode.py  flood.py  helper.py  info_handlers.py  mention.py  purge.py  user_data.py
app/plugins/: admin.py  anime.py  builtin.py  change_keyboard_layout.py  dev_tools.py  flood.py  info.py  keyboard_layout.py  listeners.py  mention.py  purge.py  python.py  resolve.py  saucenao.py  settings.py  shortener.py  userdata.py
app/storage/: __init__.py  json_storage.py  settings.py
app/utils/: __init__.py  args_parser.py  decorators.py  helper.py  types.py
