[tool.poetry]
name = "telecharm"
version = "1.0.1"
description = "Telegram userbot"
authors = ["Daniil Kovalenko <lisen1510@gmail.com>"]
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.8"
Pyrogram = "^1.1.0"
envparse = "^0.2.0"
loguru = "^0.5.3"
TgCrypto = "^1.2.2"
httpx = { extras = ["http2"], version = "^0.18.2" }
opencv-python = { version = "^4.4.0", optional = true }
uvloop = { version = "^0.14.0", optional = true }
ujson = { version = "^4.0.1", optional = true }
requests = "^2.25.1"
pydantic = "^1.8.2"
aiographfix = "^0.2.2"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
opencv = ["opencv-python"]
speedup = ["uvloop", "ujson"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
