[tool.poetry]
name = "telecharm"
version = "1.1.1"
description = "Telegram userbot made for people that value quality and simplicity."
authors = ["Daniil Kovalenko <lisen1510@gmail.com>"]
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.11"
Pyrogram = "~1.3"
loguru = "^0.6.0"
TgCrypto = "^1.2.3"
opencv-python = { version = "^4.5.4.60", optional = true }
uvloop = { version = "^0.16.0", optional = true }
ujson = { version = "^5.1.0", optional = true }
requests = { version = "^2.25.1", optional = true }
pydantic = { version = "^1.9.0", extras = ["dotenv"] }
aiohttp = "^3.8.1"
aiographfix = "^0.2.2"
saucenaopie = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.extras]
anime = ["opencv-python"]
fast = ["uvloop", "ujson"]
dev-tools = ["requests"]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
known_third_party = [
    "pyrogram",
    "loguru",
    "aiograph",
    "aiohttp",
    "opencv-python",
    "ujson",
    "pydantic",
    "uvloop",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
